# WinPaste

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION_AUDIT.md  README.md  build.rs  package-lock.json  package.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: build.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1784022273727-nimble-falcon.md  1784099445798-shiny-otter.md
doc/ui-design/: ui-design.md
src/: App.tsx  database.rs  error.rs  locales.ts  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: uninstall.nsh
src-tauri/src/: app_state.rs  database.rs  global_state.rs  main.rs
src-tauri/src/app/: setup.rs  system.rs  window_manager.rs
src-tauri/src/domain/: mod.rs  sticky.rs
src-tauri/src/infrastructure/: windows_ext.rs
src-tauri/src/services/: clipboard_listener.rs  clipboard_ops.rs  content_handler.rs  encryption_queue.rs  paste_queue.rs
src/app/: mod.rs  setup.rs  sticky_manager.rs  tray.rs  window_manager.rs
src/domain/: mod.rs
src/features/clipboard/: types.ts
src/features/sticky/: StickyManager.ts
src/infrastructure/: encryption.rs  mod.rs
src/services/: clipboard_listener.rs  clipboard_monitor.rs  clipboard_ops.rs  hotkey.rs  keyboard_nav.rs  mod.rs  paste_queue.rs  privacy.rs  win_v_intercept.rs
src/shared/lib/: utils.ts
src/state/: app_state.rs  global_state.rs  mod.rs
src/styles/: base.css
src/ui/: content_preview.rs  context_menu.rs  main_window.rs  mod.rs  settings_window.rs  styles.rs  tag_manager.rs
(+66 files in other folders)
