[package]
name = "Clipboard-paste"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-reactor = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
image = "0.24"
urlencoding = "2"
regex = "1"
windows = { version = "0.62.2", default-features = false, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Accessibility", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell"] }

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
